<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity">

    <View
        android:id="@+id/previousScreen"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/CYP"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/SubScript"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/H"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </TextView>

    <ToggleButton
        android:id="@+id/measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#029D94"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textOff="@string/cm"
        android:textOn="@string/ft"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

<!--    <com.kevalpatel2106.rulerpicker.RulerValuePicker-->
<!--        android:id="@+id/ruler_picker"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_margin="20dp"-->
<!--        android:background="#fff"-->
<!--        app:indicator_color="#000"-->
<!--        app:indicator_interval="14dp"-->
<!--        app:indicator_width="2dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/completeProfile"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView2"-->
<!--        app:layout_constraintVertical_bias="0.75"-->
<!--        app:max_value="200"-->
<!--        app:min_value="150"-->
<!--        app:notch_color="@android:color/white"-->
<!--        app:ruler_text_size="6sp" />-->


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_margin="25dp"
        android:background="#E9E9E9"
        android:elevation="21dp"
        android:shadowColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/completeProfile"
        app:layout_constraintStart_toStartOf="@+id/completeProfile"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.18">

    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="30dp"
        android:backgroundTint="#029D94"
        app:cardCornerRadius="100dp"
        app:cardElevation="21dp"
        app:layout_constraintBottom_toBottomOf="@+id/completeProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/completeProfile"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nxt"
            android:textColor="#fff"
            android:textSize="20sp">

        </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/completeProfile"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:backgroundTint="#fff"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/ProfComp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/completeProfile"
        app:layout_constraintEnd_toEndOf="@+id/completeProfile"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="@+id/completeProfile"
        app:layout_constraintTop_toTopOf="@+id/completeProfile"
        app:layout_constraintVertical_bias="0.15">

    </TextView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/percent"
        android:textColor="#029D94"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/completeProfile"
        app:layout_constraintEnd_toEndOf="@+id/completeProfile"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/completeProfile"
        app:layout_constraintVertical_bias="0.30">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#F1F1F1"
        app:cardCornerRadius="100dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/completeProfile"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/completeProfile"
        app:layout_constraintVertical_bias="0.30">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="250dp"
            android:backgroundTint="#029D94"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp">

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>